--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest --env=jsdom",
     "start": "parcel ./src/index.html",
     "typecheck": "tsc --noEmit"
   },
@@ -34,8 +34,12 @@
     "@types/react": "^16.9.48",
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.8",
+    "@types/jest": "^24.0.25",
     "@types/uuid": "^3.2.1",
+    "babel-jest": "^24.9.0",
     "parcel-bundler": "^1.12.4",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.3.0",
     "tslint": "^5.20.1",
     "typescript": "^4.0.2"
   }
